--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h3>Score :- <span id="result"></span></h3>
 
-    <div id="grid"></div>
+    <div id="grid" style="text-align:center"></div>
 
     <script src="app.js"></script>
 </body>
