Styling the pop up message

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 
     <div id="grid" style="text-align:center"></div>
 
+    <div class="pop">
+        <h2>Hurray !!</h2>
+        <p>You Won the match</p>
+        <button type="button">Ok</button>
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
