Opening the pop up

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <div id="grid" style="text-align:center"></div>
 
-    <div class="pop">
-        <h2>Hurray !!</h2>
+    <div class="pop" id="popUp">
+        <h2>Congrats </h2>
         <p>You Won the match</p>
         <button type="button">Ok</button>
     </div>
