Closing the pop Up

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="pop" id="popUp">
         <h2>Congrats </h2>
         <p>You Won the match</p>
-        <button type="button">Ok</button>
+        <button type="button" id="removePop">Ok</button>
     </div>
 
     <script src="app.js"></script>
