--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" type="text/css" rel="stylesheet" />
     <link href="styles.css" type="text/css" rel="stylesheet" />
 </head>
 <body style="background-color: rgb(251 191 36);">
@@ -18,6 +19,25 @@
         <button type="button" onclick="window.location.reload()" id="playAgain">Play again</button>
         <button type="button" id="removePop">Close</button>
     </div>
+    <div class="messages" id="messgaes">
+        <p>You found a match 😃😃</p>
+    </div>
+
+    <footer class="footer">
+        <div class="social">
+            <a href="https://github.com/Krathish-sk" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/krathish-s-k/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://twitter.com/krathishK" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://instagram.com/krathish_K" target="_blank"><i class="fab fa-instagram"></i></a>
+            
+            
+        </div>
+        <div class="copyRights">
+            <p>KSK @ 2001</p>
+        </div>
+
+    </footer>
+
 
     <script src="app.js"></script>
 </body>
